--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,110 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    padding: 60px;
+}
+
+.title{
+    font-weight: bolder;
+    text-align: center;
+    margin-bottom: 24px;
+    text-transform: uppercase;
+}
+
+input {
+    margin-top: 16px;
+    color: rgb(19, 19, 19);
+    font-size: 1.2rem;
+    width: 100%;
+    padding: 10px;
+    font-weight: bold;
+}
+
+input::placeholder {
+    font-weight: normal;
+    color: rgb(172, 172, 172);
+
+}
+
+.category {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.category h3 {
+    display: inline-block;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-size: 28px;
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 4px;
+    text-transform: uppercase;
+}
+
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 360px);
+    justify-content: center;
+}
+
+.card {
+    align-content: center;
+    border: 1px solid gray;
+    border-radius: 4px;
+    margin: 10px;
+    overflow: hidden;
+}
+
+.card p {
+    text-align: center;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.card img {
+    width: 100%;
+}
+
+
+/* ============= LOADING ============= */
+
+.container-loading {
+    width: 100%;
+    margin: 120px auto;
+}
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+}
+
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    border-color: #333 transparent #333 transparent;
+    animation: lds-dual-ring 0.7s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
